--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Rajdhani:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+
+html{
+	scroll-behavior: smooth;
+}
 body {
 	color: #797979;
 	font-family: "Roboto", sans-serif;
@@ -69,10 +73,6 @@ h2,
 		width: 30%;
 	}
 
-	.mapa{
-		width: 38%!important;
-		right: 5%!important;
-	}
 }
 
 h3,
@@ -213,15 +213,36 @@ h3,
 
 .header_area .navbar {
 	background: #0100be;
-	padding: 5px 0;
+	padding: 20px 0;
 	border: 0px;
 	border-radius: 0px;
 	width: 100%
 }
 
 @media (min-width: 991px) {
+	.mapa{
+		right: 15%!important;
+	}
+}
+
+@media (max-width: 991px) {
+	.mapa{
+		right: 10%!important;
+	}
 	.header_area .navbar {
 		padding: 20px 0
+	}
+	.medicos{
+		width: 50%;
+	}
+.area-btn{
+	margin-bottom: 100px;
+}
+
+	#area-metodologia .etapa,#area-metodologia .etapa2,
+	#area-metodologia .etapa3,#area-metodologia .etapa4
+	{
+		width: 20%!important;
 	}
 }
 
@@ -457,6 +478,16 @@ h3,
 }
 
 @media (max-width: 991px) {
+	#area-metodologia .etapa,#area-metodologia .etapa2,
+	#area-metodologia .etapa3,#area-metodologia .etapa4
+	{
+		width: 40%!important;
+	}
+
+	.check-circulo{
+		display: none;
+	}
+
 	.navbar-toggler {
 		border: none;
 		border-radius: 0px;
@@ -467,6 +498,13 @@ h3,
 	}
 	.header_area .navbar {
 		background: #0100be;
+	}
+.mapa{
+    display: none;
+}
+
+	.area-btn{
+		margin-bottom: 100px;
 	}
 	.navbar-toggler[aria-expanded="false"] span:nth-child(2) {
 		opacity: 1
@@ -494,6 +532,7 @@ h3,
 		transition: all 400ms linear;
 		cursor: pointer
 	}
+	
 	.navbar .container {
 		padding-left: 15px;
 		padding-right: 15px
@@ -764,6 +803,12 @@ h3,
 @media (min-width: 991px) {
 	.hero-banner {
 		padding: 175px 0 160px 0
+	}
+
+	#area-metodologia .etapa,#area-metodologia .etapa2,
+	#area-metodologia .etapa3,#area-metodologia .etapa4
+	{
+		width: 40%!important;
 	}
 }
 
