--- a/resources/views/site/municipio/ajax/index.html
+++ b/resources/views/site/municipio/ajax/index.html
@@ -1,5 +1,5 @@
     <div id="am">
-        <h2>Amazonas (2)</h2>
+        <h2>Amazonas (3)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -13,11 +13,29 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Manaquiri</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Iranduba</td>
+              </tr>
             </tbody>
           </table>
     </div>
+    <div id="ro">
+      <h2>Rondônia (1)</h2>
+      <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Municípios</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><i class="fa fa-map-marker" aria-hidden="true"></i> Buritis</td>
+            </tr>
+          </tbody>
+        </table>
+  </div>
     <div id="pa">
-        <h2>Pará (2)</h2>
+        <h2>Pará (3)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -30,6 +48,9 @@
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Primavera</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Santa Bárbara do Pará</td>
               </tr>
             </tbody>
           </table>
@@ -50,7 +71,7 @@
               </table>
         </div>
     <div id="ba">
-        <h2>Bahia (13)</h2>
+        <h2>Bahia (17)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -97,11 +118,23 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Saubara</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Candeias </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Maraú </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Pintadas</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Valente</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="ce">
-        <h2>Ceará (3) </h2>
+        <h2>Ceará (17) </h2>
         <table class="table">
             <thead>
               <tr>
@@ -118,11 +151,53 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Sobral</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Aratuba </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Barreira </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Baturité </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Boa Viagem </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Capistrano </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Madalena </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Massapê</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Morrinhos</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Mucambo</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Pacujá</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Palhano </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Palmácia </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Paracuru</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Redenção</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="pb">
-        <h2>Paraíba (1)</h2>
+        <h2>Paraíba (4)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -133,11 +208,20 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Conde</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Bayeux</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Cabedelo</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Lagoa Seca</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="pe">
-        <h2>Pernambuco (15)</h2>
+        <h2>Pernambuco (22)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -190,11 +274,32 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Trindade</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Brejo da Madre de Deus </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Caetés </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Feira Nova </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Gravatá </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Limoeiro</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Moreno </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Surubim</td>
+              </tr>
             </tbody>
         </table>
     </div>
     <div id="pi">
-        <h2>Piauí (4)</h2>
+        <h2>Piauí (5)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -214,11 +319,14 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Simões</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Demerval Lobão</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="se">
-        <h2>Sergipe (1)</h2>
+        <h2>Sergipe (4)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -229,11 +337,20 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Laranjeiras</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Barra dos Coqueiros</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nossa Senhora do Socorro</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> São Cristóvão</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="mg">
-        <h2>Minas Gerais (12)</h2>
+        <h2>Minas Gerais (15)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -277,15 +394,27 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Vazante</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Caeté</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Lima Duarte</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nova Lima</td>
+              </tr>
             </tbody>
           </table>
     </div>
     <div id="rj">
-        <h2>Rio de Janeiro (1)</h2>
+        <h2>Rio de Janeiro (2)</h2>
         <table class="table">
             <thead>
               <tr>
                 <th scope="col">Municípios</th>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nilópolis</td>
               </tr>
             </thead>
             <tbody>
@@ -296,7 +425,7 @@
           </table>
     </div>
     <div id="sp">
-        <h2>São Paulo (16)</h2>
+        <h2>São Paulo (19)</h2>
         <table class="table">
             <thead>
               <tr>
@@ -352,6 +481,15 @@
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> São Roque</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Onda Verde</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Rio Grande da Serra </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i>Santa Cruz da Vitória</td>
+              </tr>
             </tbody>
           </table>
     
@@ -385,7 +523,7 @@
         
     </div>
     <div id="mt">
-        <h2>Mato Grosso (2) </h2>
+        <h2>Mato Grosso (3) </h2>
         <table class="table">
             <thead>
               <tr>
@@ -398,6 +536,9 @@
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Várzea Grande</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Santo Antônio do Leverger</td>
               </tr>
             </tbody>
           </table>
