--- a/resources/views/site/municipio/ajax/regioes.html
+++ b/resources/views/site/municipio/ajax/regioes.html
@@ -1,11 +1,11 @@
 <div id="n">
-    <h2>Região Norte (5) </h2>
+    <h2>Região Norte (8) </h2>
     <table class="table">
         <thead>
         </thead>
         <tbody>
         <tr>
-            <th class="table-active" scope="col">Amazonas (2)</th>
+            <th class="table-active" scope="col">Amazonas (3)</th>
         </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Autazes</td>
@@ -14,7 +14,10 @@
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Manaquiri</td>
           </tr>
           <tr>
-            <th  class="table-active" scope="col">Pará (2)</th>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Iranduba</td>
+          </tr>
+          <tr>
+            <th  class="table-active" scope="col">Pará (3)</th>
           </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Barcarena</td>
@@ -23,22 +26,31 @@
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Primavera</td>
           </tr>
           <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Santa Bárbara do Pará</td>
+          </tr>
+          <tr>
             <th  class="table-active" scope="col">Tocantins (1)</th>
           </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Xambioá</td>
           </tr>
+          <tr>
+            <th  class="table-active" scope="col">Rondônia (1)</th>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Buritis</td>
+          </tr>
         </tbody>
       </table>
 </div>
 <div id="ne">
-    <h2>Região Nordeste (37) </h2>
+    <h2>Região Nordeste (69) </h2>
     <table class="table">
         <thead>
         </thead>
         <tbody>
             <tr>
-                <th  class="table-active" scope="col">Bahia (13)</th>
+                <th  class="table-active" scope="col">Bahia (17)</th>
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Uruçuca </td>
@@ -80,7 +92,19 @@
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Saubara</td>
               </tr>
               <tr>
-                <th  class="table-active" scope="col">Ceará (3)</th>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Candeias </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Maraú </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Pintadas</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Valente</td>
+              </tr>
+              <tr>
+                <th  class="table-active" scope="col">Ceará (17)</th>
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Acarape</td>
@@ -92,13 +116,64 @@
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Sobral</td>
               </tr>
               <tr>
-                <th  class="table-active" scope="col">Paraíba (1)</th>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Aratuba </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Barreira </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Baturité </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Boa Viagem </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Capistrano </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Madalena </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Massapê</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Morrinhos</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Mucambo</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Pacujá</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Palhano </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Palmácia </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Paracuru</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Redenção</td>
+              </tr>
+              <tr>
+                <th  class="table-active" scope="col">Paraíba (4)</th>
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Conde</td>
               </tr>
               <tr>
-                <th  class="table-active" scope="col">Pernanbuco (15)</th>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Bayeux</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Cabedelo</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Lagoa Seca</td>
+              </tr>
+              <tr>
+                <th  class="table-active" scope="col">Pernanbuco (22)</th>
               </tr>
               <tr>
                 <td> <i class="fa fa-map-marker" aria-hidden="true"></i> Ouricuri </td>
@@ -146,7 +221,28 @@
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Trindade</td>
               </tr>
               <tr>
-                <th  class="table-active" scope="col">Piauí (4)</th>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Brejo da Madre de Deus </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Caetés </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Feira Nova </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Gravatá </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Limoeiro</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Moreno </td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Surubim</td>
+              </tr>
+              <tr>
+                <th  class="table-active" scope="col">Piauí (5)</th>
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Betânia do Piauí</td>
@@ -161,17 +257,30 @@
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Simões</td>
               </tr>
               <tr>
-                <th  class="table-active" scope="col">Sergipe (1)</th>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Demerval Lobão</td>
+              </tr>
+              <tr>
+                <th  class="table-active" scope="col">Sergipe (4)</th>
               </tr>
               <tr>
                 <td><i class="fa fa-map-marker" aria-hidden="true"></i> Laranjeiras</td>
               </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Barra dos Coqueiros</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nossa Senhora do Socorro</td>
+              </tr>
+              <tr>
+                <td><i class="fa fa-map-marker" aria-hidden="true"></i> São Cristóvão</td>
+              </tr>
+      
         </tbody>
       </table>
 </div>
 
 <div id="se">
-    <h2>Região Sudeste (29)</h2>
+    <h2>Região Sudeste (36)</h2>
     <table class="table">
         <thead>
           <tr>
@@ -179,7 +288,7 @@
         </thead>
         <tbody>
             <tr>
-                <th  class="table-active" scope="col">Minas Gerais (12)</th>
+                <th  class="table-active" scope="col">Minas Gerais (15)</th>
             </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Caldas</td>
@@ -218,13 +327,25 @@
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Vazante</td>
           </tr>
           <tr>
-            <th  class="table-active" scope="col">Rio de Janeiro (1)</th>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Caeté</td>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Lima Duarte</td>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nova Lima</td>
+          </tr>
+          <tr>
+            <th  class="table-active" scope="col">Rio de Janeiro (2)</th>
         </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Cantagalo</td>
           </tr>
           <tr>
-            <th  class="table-active" scope="col">São Paulo (16)</th>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nilópolis</td>
+          </tr>
+          <tr>
+            <th  class="table-active" scope="col">São Paulo (19)</th>
         </tr>
         <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Rosana </td>
@@ -274,12 +395,21 @@
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> São Roque</td>
           </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Onda Verde</td>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Rio Grande da Serra </td>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i>Santa Cruz da Vitória</td>
+          </tr>
         </tbody>
       </table>
 </div>
 
 <div id="co">
-    <h2>Região Centro-Oeste: (8)</h2>
+    <h2>Região Centro-Oeste: (9)</h2>
     <table class="table">
         <thead>
           <tr>
@@ -305,13 +435,16 @@
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Santa Rita do Novo Destino</td>
           </tr>
           <tr>
-            <th  class="table-active" scope="col">Mato Grosso (2)</th>
+            <th  class="table-active" scope="col">Mato Grosso (3)</th>
         </tr>
         <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Nobres</td>
           </tr>
           <tr>
             <td><i class="fa fa-map-marker" aria-hidden="true"></i> Várzea Grande</td>
+          </tr>
+          <tr>
+            <td><i class="fa fa-map-marker" aria-hidden="true"></i> Santo Antônio do Leverger</td>
           </tr>
           <tr>
             <th  class="table-active" scope="col">Mato Grosso do Sul (1)</th>
