--- a/public/site/css/main.css
+++ b/public/site/css/main.css
@@ -227,6 +227,8 @@
     font-size: 10pt;
     margin-top: 20px;
     font-weight: bold;
+    position: absolute;
+    bottom: 20px;
 }
 
 .btn-sobre-votorantim:hover,.btn-inscreva-webinar:hover,
